--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <div class="container d-flex align-items-center h-100">
+    <div class="container h-100">
       <div class="row">
         <header>
           <h1 class="text-uppercase text-center col-12"><strong>My very First Startup</strong></h1>
