--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <div class="container h-100">
       <div class="row">
-        <header>
-          <h1 class="text-uppercase text-center col-12"><strong>My very First Startup</strong></h1>
+        <header class="text-center col-12">
+          <h1 class="text-uppercase"><strong>My very First Startup</strong></h1>
         </header>
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
